# ntpwatch

./: .gitignore  README.md  pyproject.toml
src/ntpwatch/: __init__.py  __main__.py  app.py  app.tcss  config.py
src/ntpwatch/ntp/: client.py  control.py  packet.py  types.py
src/ntpwatch/views/: dashboard.py  peers.py  variables.py
src/ntpwatch/widgets/: reach_bar.py  server_table.py  sparkline.py  status_bar.py
tests/: test_client.py  test_config.py  test_control.py  test_packet.py
