[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ntpwatch"
version = "0.1.0"
description = "Modern terminal UI for monitoring NTP time servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "textual>=0.75.0",
]

[project.scripts]
ntpwatch = "ntpwatch.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "textual-dev>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
